<resources>
    <string name="app_name">蚂蚁搬砖</string>
    <string name="str_module_login_name">登录</string>
    <string name="str_users_login">用户登录</string>
    <string name="str_users_please_sigh_in_before">如没有账号，请</string>
    <string name="str_users_please_sigh_in_after">前往注册</string>
    <string name="str_username">用户名</string>
    <string name="str_pwd">密码</string>
    <string name="str_forgot_password">忘记密码？</string>
    <string name="str_login">立即登录</string>
    <string name="str_api_address">设置API地址</string>
    <string name="str_please_input">请输入</string>
    <string name="str_please_input_correct">请输入正确的</string>
    <string name="str_please">请</string>
    <string name="str_login_success">登录成功</string>
    <string name="str_login_error">用户名或密码错误</string>
    <string name="str_exit_again">再按一次退出</string>
    <string name="str_sign_up">注册</string>
    <string name="str_email_sign_up">邮箱注册</string>
    <string name="str_phone_sign_up">手机号注册</string>
    <string name="str_phone">手机号码</string>
    <string name="str_phone_number">手机号码</string>
    <string name="str_email">邮箱</string>
    <string name="str_new_phone_number">新的手机号码</string>
    <string name="str_re_send">重新获取</string>
    <string name="str_phone_code">短信验证码</string>
    <string name="str_email_code">邮箱验证码</string>
    <string name="str_repeat_password">确认新密码</string>
    <string name="str_phone_not_correct">手机号码不正确</string>
    <string name="str_email_not_correct">邮箱格式不正确</string>
    <string name="str_pwd_diff">两次密码不一致！</string>
    <string name="str_code">短信验证码</string>
    <string name="str_new_code">新的验证码</string>
    <string name="str_promotion_code">邀请码（选填）</string>
    <string name="str_pwd_login">登录密码</string>
    <string name="str_confirm_pwd">确认密码</string>
    <string name="str_please_login_have_account">如有账号，请</string>
    <string name="str_please_login">直接登录</string>
    <string name="str_country">国籍</string>
    <string name="str_pwd_login_tag">登录密码，大小写字母+数字，6-20位</string>
    <string name="str_regist_agree">《用户协议》</string>
    <string name="str_code_error">验证码错误或已失效</string>
    <string name="str_reset_email_pwd">重置邮箱密码</string>
    <string name="str_reset_phone_pwd">重置手机密码</string>
    <string name="str_sure">确定</string>
    <string name="set_money_pwd">设置交易密码</string>
    <string name="edit_money_pwd_tag">您正在修改账户的交易密码</string>
    <string name="set_money_pwd_tag">您正在设置账户的交易密码</string>
    <string name="change_money_pwd">修改交易密码</string>
    <string name="reset_money_pwd_tag">您正在重置账户的交易密码</string>
    <string name="old_money_pwd">旧交易密码</string>
    <string name="new_money_pwd">新交易密码</string>
    <string name="confirm_money_pwd">确认交易密码</string>
    <string name="reset_money_pwd">重置交易密码</string>
    <string name="text_money_pwd">交易密码</string>
    <string name="set_money_pwd_first">请先设置交易密码</string>
    <string name="text_money_pwd_tag">请输入6位交易密码</string>
    <string name="str_start_order">开始接单</string>
    <string name="str_stop_order">停止接单</string>
    <string name="str_fact_order_count">今日接单数</string>
    <string name="str_fact_commission">今日收益</string>
    <string name="str_finish_rate">完成率</string>
    <string name="str_order_speed">平均放行速度</string>
    <string name="str_commission_insufficient">您的账户余额不足，请购买</string>
    <string name="str_add_commission">请先补充保证金</string>
    <string name="str_add_go">购买</string>
    <string name="str_not_start">您还未开始接单!</string>
    <string name="str_not_start_order">还未接单</string>
    <string name="str_ordering">接单中...</string>
    <string name="str_buy">购买</string>
    <string name="str_sell">出售</string>
    <string name="str_create_time">创建时间</string>
    <string name="str_order_num">订单号</string>
    <string name="str_pay_num">付款参考号</string>
    <string name="str_remark">备　　注</string>
    <string name="str_rate">汇率</string>
    <string name="str_cd_count">承兑数量</string>
    <string name="str_all_value">总价值</string>
    <string name="str_use_count">可用数量</string>
    <string name="str_pay">去支付</string>
    <string name="str_cancel">取消</string>
    <string name="str_release">放行</string>
    <string name="str_out_time">超时单</string>
    <string name="str_copy_success">复制成功</string>
    <string name="str_copy_fail">复制失败</string>
    <string name="str_pay_way">支付方式</string>
    <string name="str_please_select">请选择</string>
    <string name="str_duiru">卖币</string>
    <string name="str_duiru_cny">卖币到账金额(CNY)</string>
    <string name="str_duichu">买币</string>
    <string name="str_duichu_cny">买币(CNY)</string>
    <string name="str_order_create">订单创建</string>
    <string name="str_already_pay">对方已付款</string>
    <string name="str_need_release">待放行</string>
    <string name="str_pay_usdt">支付(%1$s)</string>
    <string name="str_get_usdt">收取(%1$s)</string>
    <string name="str_rate_cny">汇率(CNY)</string>
    <string name="str_order_cny">订单金额(CNY)</string>
    <string name="str_order_random_cny">随机立减%1$s</string>
    <string name="str_pay_account">付款参考号</string>
    <string name="str_order_detail">接单详情</string>
    <string name="str_release_success">放行成功</string>
    <string name="str_pay_mode">付款方式</string>
    <string name="str_cancel_success">取消成功</string>
    <string name="str_already_pay_m">已付款</string>
    <string name="str_already_release">已放行</string>
    <string name="str_already_cancel">订单已取消</string>
    <string name="str_need_release_out">超时单，待放行</string>
    <string name="str_confirm_cancel">确认取消</string>
    <string name="str_pay_account_tag">收款账户</string>
    <string name="str_already_release_force">补单完成</string>
    <string name="str_already_release_cancel_force">超时再放行</string>
    <string name="str_wait_pay">待付款</string>
    <string name="str_bank_transfer">银行转账</string>
    <string name="str_bank">银行卡</string>
    <string name="str_ali">支付宝</string>
    <string name="str_ali_account">支付宝账号</string>
    <string name="str_ali_account_nickname">支付宝昵称</string>
    <string name="str_ali_account_id">收款id</string>
    <string name="str_ali_account_id_tip">请输入收款id</string>
    <string name="str_ali_account_id_get">点击查看获取方法</string>
    <string name="str_ali_account_id_tag">1、点击文字部分，自动打开支付宝获取收款ID，并复制填入到文本框进行保存。\n2、点击二维码保存图片，进入支付宝扫一扫-相册，选择二维码后获取收款ID，并复制填入到文本框进行保存。</string>
    <string name="str_ali_account_id_title">获取收款id</string>
    <string name="str_ali_tip">请输入支付宝账号</string>
    <string name="str_ali_tip_nickname">请输入支付宝昵称</string>
    <string name="str_wechat">微信</string>
    <string name="str_wechat_account">微信号</string>
    <string name="str_wechat_tip">请输入微信号</string>
    <string name="str_wechat_account_nickname">微信昵称</string>
    <string name="str_wechat_tip_nickname">请输入微信昵称</string>
    <string name="str_paypal">Paypal</string>
    <string name="str_paypal_tip">请输入Paypal账号</string>
    <string name="str_open_ali">打开支付宝付款</string>
    <string name="str_open_wechat">打开微信付款</string>
    <string name="str_rec">收款人</string>
    <string name="str_pay_person">付款人</string>
    <string name="str_rec_account">收款账号</string>
    <string name="str_rec_code">收款二维码</string>
    <string name="str_pay_tag">我已知晓：需在付款成功后点击下方按钮。（恶意卡单将会被冻结账号。）</string>
    <string name="str_pay_finish">已完成付款</string>
    <string name="str_open_bank">开户银行</string>
    <string name="str_branch">开户支行</string>
    <string name="str_bank_num">银行卡号</string>
    <string name="str_confirm_cardnumber">确认卡号</string>
    <string name="str_confirm_pay">确认已付款</string>
    <string name="str_please_confirm">请确认您已向对方付款，恶意点击将会被作为违规处理</string>
    <string name="str_pay_success">商户已放币，请至资产中心查看您的账户资产</string>
    <string name="str_pay_success_wait">付款完成，请等待放币</string>
    <string name="str_pay_finish_tag">交易已完成</string>
    <string name="str_release_tag">请务必登录网上银行或第三支付账户确认收到该笔款项。您确认收到此款项吗？</string>
    <string name="str_release_sure_tag">我确认已登录收款账户，并核对收款无误！</string>
    <string name="str_release_sure_finish_tag">如若查询订单信息，请至个人中心-订单查询。</string>
    <string name="str_please_input_assets_pwd">请输入交易密码</string>
    <string name="str_sure_release">确认放行</string>
    <string name="str_detail">详情</string>
    <string name="str_opening_branchTip">请输入开户支行</string>
    <string name="str_unionpay_accountTip">请输入银行卡号</string>
    <string name="str_unionpay_accountTip2">请再次输入银行卡号</string>
    <string name="str_pay_remark">禁止转账时备注任何字，否则不放币不退钱</string>
    <string name="str_wait_pay_tag">等待对方付款</string>
    <string name="str_auth_sure_tag">您必须先在当前承兑商等级中进行退保，才能加入其它等级</string>
    <string name="str_pay_type_tag">* 注：收款账号越多，派单的成功率越高。</string>
    <string name="str_pay_warn_tag">风控提醒</string>
    <string name="str_pay_custom_cancel_tag">用户手动取消订单!</string>
    <string name="str_my_assast">我的资产</string>
    <string name="str_my_order">我的订单</string>
    <string name="str_my_safe">安全中心</string>
    <string name="str_my_setting">设置中心</string>
    <string name="str_about_us">关于我们</string>
    <string name="str_appeal">纠纷管理</string>
    <string name="str_detify">承兑商认证</string>
    <string name="str_rec_way">收款方式</string>
    <string name="str_my_credit">实名认证</string>
    <string name="str_photo">头像</string>
    <string name="str_login_pwd">登录密码</string>
    <string name="str_asset_pwd">交易密码</string>
    <string name="str_id_credit">实名认证</string>
    <string name="str_bound">已绑定</string>
    <string name="str_unbound">未绑定</string>
    <string name="str_had_set">已设置</string>
    <string name="str_not_set">未设置</string>
    <string name="str_to_edit">去修改</string>
    <string name="str_verification">已认证</string>
    <string name="str_unverified">未认证</string>
    <string name="str_creditting">审核中</string>
    <string name="str_creditfail">审核失败</string>
    <string name="str_unverified_notice">后台将在1-3个工作日内审核完成，请耐心等待。。。</string>
    <string name="str_creditfail_notice">身份认证失败，请重新提交！</string>
    <string name="str_creditfail_notice_reason">失败原因：</string>
    <string name="str_certifySuccessful">您的身份信息已认证成功!</string>
    <string name="str_login_out">退出登录</string>
    <string name="str_account_set">账户设置</string>
    <string name="str_camera">拍照</string>
    <string name="str_album">相册</string>
    <string name="binding_phone_first">请先绑定手机号</string>
    <string name="str_binding">绑定</string>
    <string name="str_diff_cardnumber">银行卡号不一致</string>
    <string name="str_change_phone_num">更换手机号码</string>
    <string name="str_phone_validate">手机验证</string>
    <string name="str_chg_phone">修改手机号</string>
    <string name="str_change_bind_phone_num_tag">您正在修改币诚账户绑定的手机号，请进行身份认证</string>
    <string name="str_receive_phone_code">原手机能接收验证码</string>
    <string name="str_unreceive_phone_code">原手机不能接收验证码</string>
    <string name="str_unreceive_phone_code_tag">原手机号不能接收验证码，请联系客服进行修改绑定</string>
    <string name="str_handset_tail_number">手机尾号</string>
    <string name="str_receive_message_code">接收到的短信验证码</string>
    <string name="str_change_bind_phone_num">修改绑定手机号</string>
    <string name="str_incomplete_information">信息填写不完整</string>
    <string name="str_name">姓名</string>
    <string name="str_read">我已阅读并同意</string>
    <string name="str_agreement">《用户协议》</string>
    <string name="str_add_now">立即加入</string>
    <string name="str_auth_process_1">承兑商认证条件</string>
    <string name="str_auth_process_2">1.丰富的数字货币投资经验，在币圈有广泛的资源，并热爱数字货币资产产业；</string>
    <string name="str_auth_process_3">2.承兑商不受国际、性别、年龄限制；</string>
    <string name="str_auth_process_4">3.保证金缴纳：无；</string>
    <string name="str_auth_process_5">4.点击立即加入后，审核通过才能成为承兑商。</string>
    <string name="str_assets_reward_desc">收益说明</string>
    <string name="str_assets_reward_desc_1">1.T+1自动结算；</string>
    <string name="str_assets_reward_desc_2">2.收益结算后自动充值到账户；</string>
    <string name="str_assets_reward_desc_3">3.具体时间请以实际到账为准。</string>
    <string name="str_save">保存</string>
    <string name="str_account_wart">注意事项</string>
    <string name="str_account_wart_input">请输入注意事项</string>
    <string name="str_account_day_input">每日限额</string>
    <string name="str_account_day_input_tag">请输入每日限额</string>
    <string name="str_next">下一步</string>
</resources>